    SLOT-UNBOUND.  (reported by Pascal Costanza)
  * bug fix: an error was signaled at startup if the HOME environment 
    variable was defined, but had an empty value (reported by Peter Van Eynde)
  * bug fix: non ordinary lambda-list keyword in ordinary lambda lists
    signal a PROGRAM-ERROR, not a BUG.
  * bug fix: SB-POSIX:READDIR works when built with large file support.
  * optimization: loading generic functions no longer takes O(n^2) time,
    proportional to the amount of methods in the generic function
    (reported by Todd Sabin and Jeremy Brown)        
  * optimization: the FIND and POSITION family of sequence functions
    are significantly faster on arrays whose element types have been
    declared.

changes in sbcl-1.0 relative to sbcl-0.9.18:
  * improvement: experimental support for threading on FreeBSD/x86.
    (thanks to NIIMI Satoshi)
  * improvement: runtime option --dynamic-space-size can be used
    to set the size of the dynamic space reserved on startup.
  * improvement: floating point modes in effect are now saved in
    core, and restored on startup.
  * improvement: GET-INTERNAL-REAL-TIME now reports the time since
    startup, not time since first call to GET-INTERNAL-REAL-TIME.
  * improvement: SAVE-LISP-AND-DIE explicitly checks that multiple
    threads are not running after *SAVE-HOOKS* have run.
  * improvement: writes to CLOS instance slots are type-checked in code
    compiled with (SAFETY 3)
  * improvement: floating-point exception handling on FreeBSD (thanks to
    NIIMI Satoshi)
  * improvement: SB-POSIX supports time(2), utime(2) and utimes(2)
    (thanks to Zach Beane)
  * improvement: support for files larger than 2GB for CL streams and SB-POSIX
    on Linux/x86
  * improvement: added support for the Shift-JIS external format.
    (contributed by NIIMI Satoshi)
  * improvement: callbacks are supported on Linux/PPC.  (thanks to
    Joshua Ross)
  * bug fix: compiler bug triggered by a (non-standard) VALUES